--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.25.4",
+    "@clerk/themes": "^2.4.55",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.525.0",
-    "next": "14.2.6",
+    "mongodb": "^7.1.0",
+    "mongoose": "^9.2.2",
+    "next": "^14.2.25",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^2.4.5",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.3.1",
